src/objects/Shop__c.object
<CustomObject>
    <fields>
        <fullName>Annual_Revenue__c</fullName>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Corporation__c</fullName>
        <label>Corporation</label>
        <referenceTo>Corporation__c</referenceTo>
        <relationshipLabel>Shops</relationshipLabel>
        <relationshipName>Shops</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Director</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Shops</relationshipLabel>
        <relationshipName>Shops</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Logo__c</fullName>
        <formula>IMAGE(&quot;https://assets.billa.ua/v1/images/38272&quot;, &quot;Logo&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Logo</label>
        <type>Text</type>
    </fields>
    <label>Shop</label>
    <nameField>
        <label>Shop Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shops</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>